# PSoC-Host-Application

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  DHCOM.pro  PSOC_HOST_Packaging.cmake  PSOC_HOST_Utils.cmake  README.md  arm-linux-gnueabihf-toolchain.CMakeCrossSysroot.txt  changelog  generate_debian_package.sh  generate_dev_archive.sh
C-API/: ApiManager.cpp  ApiManager.h  C-API.pro  CMakeLists.txt  Compressor.cpp  Compressor.h  IApiManager.h  helpers.cpp
C-API/api/: bitmap.cpp  buttons.cpp  display.cpp  eeprom.cpp  init.cpp  leds.cpp  stats.cpp
C-API/api/include/: bitmap.h  buttons.h  c-api.h  display.h  eeprom.h  helpers.h  init.h  leds.h  resultcodes.h  stats.h
C-API/api/include/c-api/: bitmap.h  buttons.h  c-api.h  display.h  eeprom.h  helpers.h  init.h  leds.h  resultcodes.h  stats.h
C-API/doc/: Doxyfile  header.tex  stylesheet.tex
C-API/include/: IApiManager.h  IButtons.h  IDisplay.h  IEeprom.h  ILed.h  bitmap.h  buttons.h  c-api.h  display.h  eeprom.h  helpers.h  init.h  leds.h  resultcodes.h  stats.h
C-API/peripherals/: Buttons.cpp  Buttons.h  Display.cpp  Display.h  Eeprom.cpp  Eeprom.h  Gpios.h  IApiManager.h  IButtons.h  IDisplay.h  IEeprom.h  ILed.h  Led.cpp  Led.h  LedOnGpio.cpp  LedOnGpio.h
C-API/spi/: Command.h  GenericHelpers.c  GenericHelpers.h  MasterHelpers.cpp  MasterHelpers.h  Response.h  SlaveHelpers.c  SlaveHelpers.h  SpiProto.cpp  SpiProto.h  SpiProtoDummy.cpp
DEBIAN_PACKAGE/: changelog  control  postinst  preinst
DEBIAN_PACKAGE/DEBIAN/: changelog  control  postinst.systemd  postinst.update-rc  preinst.systemd  preinst.update-rc
DEBIAN_PACKAGE/etc/init.d/: json-server
DEBIAN_PACKAGE/etc/system/: json-server.service
DEBIAN_PACKAGE/etc/systemd/system/: json-server.service
Examples/: CMakeLists.txt  Examples.pro  bounce.cpp  bounce.h  main.cpp  space.cpp  space.h
JSON-API/: JSON-API.pro  JsonHandlers.cpp  JsonServer.cpp  JsonServer.h  JsonState.cpp  JsonState.h  ReadStream.cpp  ReadStream.h  ServiceListener.cpp  ServiceListener.h  WriteStream.cpp  WriteStream.h  json-server.sh  main.cpp
JSON-API/rapidjson-master/: readme.html
JSON-API/rapidjson-master/include/rapidjson/: reader.h
JSON-API/tests/: all_bad_tests.sh  displayEnable_On.json  displayShow.json  displayText.json  unfinished_packet1.json  unknown_func.json  watchdog.json  writeLed_Alarm_Off.json  writeLed_Alarm_On.json  writeLed_Bus_On.json  writeLed_Err_Off.json  writeLed_Err_On.json  writeLed_Lan_Off.json  writeLed_RS232_A_On.json  writeLed_RS232_B_On.json  writeLed_Ready_Off.json  writeLed_Ready_On.json  writeLed_Status_Off.json  writeLed_Status_On.json  writeLed_Uplink_Off.json  writeLed_Uplink_On.json  writeLed_extra_arg.json  writeLed_wrong_type1.json  writeLed_wrong_type2.json  writeLed_wrong_type3.json  writeSplash.json
JSON-API/tests/DisplayText/: DisplayText.sh  disconnect.json  displaySetPosZ1.json  displayTextZ1-1.json  displayTextZ2-1.json  displayTextZ2-2.json  displayTextZ4-1.json  displayTextZ4-2.json
JSON-API/tests/DisplayTime/: DisplayTime.sh
Tests/: CMakeLists.txt  Tests.pro  bounce.cpp  bounce.h  infiniteDisplayButtonsTest.cpp  main.cpp  space.cpp  testButtons.cpp  testDisplay.cpp  testLeds.cpp  testSplash.cpp
Tool/: Api.cpp  Api.h  Buttons.cpp  Buttons.h  CMakeLists.txt  Display.cpp  Display.h  Leds.cpp  Leds.h  Service.cpp  Service.h  Tool.pro  main.cpp
drc-01-development/: generate_debian_package.sh  generate_dev_archive.sh
drc-01-development/C-API/: C-API.pro  IApiManager.h  helpers.cpp
drc-01-development/C-API/api/: bitmap.cpp  display.cpp  eeprom.cpp  leds.cpp
drc-01-development/C-API/doc/: Doxyfile
drc-01-development/C-API/include/: bitmap.h  leds.h
drc-01-development/C-API/peripherals/: Buttons.cpp  Buttons.h  Eeprom.cpp  Eeprom.h  Gpios.h  IDisplay.h  IEeprom.h  ILed.h  Led.cpp  Led.h  LedOnGpio.cpp  LedOnGpio.h
drc-01-development/C-API/spi/: Command.h  MasterHelpers.cpp  MasterHelpers.h  Response.h  SpiProto.h
drc-01-development/Examples/: main.cpp  space.cpp
drc-01-development/JSON-API/: JSON-API.pro  JsonServer.cpp  JsonServer.h  JsonState.h  ServiceListener.cpp  ServiceListener.h  WriteStream.cpp  main.cpp
drc-01-development/JSON-API/tests/: all_good_tests.sh  displayEnable_Off.json  displaySetPos.json  displayText.json  getErrorCounters.json  getVersions.json  readButtons.json  resetStats.json  shutdown.json  unfinished_packet2.json  unfinished_packet3.json  unknown_tag.json  writeLed_Bus_Off.json  writeLed_Lan_On.json  writeLed_Run_Off.json  writeLed_Run_On.json  writeLed_extra_arg.json  writeLed_wrong_type1.json
drc-01-development/JSON-API/tests/DisplayText/: displaySetPosZ2.json  displaySetPosZ3.json  displaySetPosZ4.json  displayTextZ1-2.json  displayTextZ3-1.json  displayTextZ3-2.json
drc-01-development/JSON-API/tests/DisplayTime/: displayClear.json  displaySetPos.json
drc-01-development/Tests/: testButtons.cpp  testLeds.cpp
libdhcom-hal/: libdhcom-hal-dev_1.4+deb10-8-g60c22f2_armel.deb  libdhcom-hal-dev_1.4+deb10-8-g60c22f2_armhf.deb  libdhcom-hal-dev_1.7_armel.deb  libdhcom-hal-dev_1.7_armhf.deb  libdhcom-hal_1.4+deb10-8-g60c22f2_armel.deb  libdhcom-hal_1.4+deb10-8-g60c22f2_armhf.deb  libdhcom-hal_1.7_armel.deb  libdhcom-hal_1.7_armhf.deb
